--- a/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/src/app/pages/admin/dashboard/dashboard.component.html
@@ -71,7 +71,7 @@
      </div>
    
      <div *ngIf="activeSection === 'stock'">
-       <h2 class="text-xl font-bold mb-4">stock Analytics</h2>
+      <app-store-dashboard></app-store-dashboard>
      </div>
    </div>
    
