--- a/src/app/pages/admin/user-management/user-management.component.html
+++ b/src/app/pages/admin/user-management/user-management.component.html
@@ -10,7 +10,7 @@
            <th class="px-4 py-2">First Name</th>
            <th class="px-4 py-2">Last Name</th>
            <th class="px-4 py-2">Email</th>
-           <th class="px-4 py-2">Phone</th>
+           <th class="px-4 py-2">phoneNumber</th>
            <th class="px-4 py-2">Role</th>
            <th class="px-4 py-2">Status</th>
            <th class="px-4 py-2">Actions</th>
@@ -22,7 +22,7 @@
            <td class="px-4 py-2">{{ user.firstName }}</td>
            <td class="px-4 py-2">{{ user.lastName }}</td>
            <td class="px-4 py-2">{{ user.email }}</td>
-           <td class="px-4 py-2">{{ user.phone || '-' }}</td>
+           <td class="px-4 py-2">{{ user.phoneNumber || '-' }}</td>
    
            <!-- Role Dropdown -->
            <td class="px-4 py-2">
@@ -33,7 +33,7 @@
              >
                <option value="ROLE_USER" [selected]="user.role === 'ROLE_USER'">User</option>
                <option value="ROLE_ADMIN" [selected]="user.role === 'ROLE_ADMIN'">Admin</option>
-             </select>
+             </select> 
            </td>
    
            <!-- Status -->
